--- a/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
@@ -5,11 +5,11 @@ eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=miriyalamuralikrishna98@gmail.com
-spring.mail.password=jynduwngxdckjnri
-spring.datasource.url=jdbc:mysql:///hrm_schema
+spring.mail.username=veeramallaj@gmail.com
+spring.mail.password=bqwrcollqqdecfow
+spring.datasource.url=jdbc:mysql:///prod_with_data
 spring.datasource.username=root
-spring.datasource.password=mysql_5andhya
+spring.datasource.password=3472
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
