--- a/HRM_LOCAL/HRM_LOCAL_UI/package.json
+++ b/HRM_LOCAL/HRM_LOCAL_UI/package.json
@@ -11,16 +11,31 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@fontsource/poppins": "^4.5.8",
     "@hookform/resolvers": "^2.8.8",
+    "@mui/icons-material": "5.2.0",
+    "@mui/material": "5.2.8",
+    "@mui/styled-engine": "5.2.0",
+    "@mui/styles": "^5.5.1",
+    "@mui/x-data-grid": "5.4.0",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
+    "@testing-library/user-event": "12.1.10",
+    "ag-grid-community": "^23.2.0",
+    "ag-grid-enterprise": "^23.2.0",
+    "ag-grid-react": "^23.2.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.1",
     "lodash": "^4.17.21",
+    "material-table": "^1.63.0",
+    "mdb-react-ui-kit": "^3.0.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
@@ -33,14 +48,19 @@
     "react-loading-overlay": "^1.0.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "react-scroll": "^1.8.7",
+    "react-swipeable-views": "^0.14.0",
+    "react-table": "7.7.0",
     "react-tabs": "^4.1.0",
     "react-toastify": "^8.2.0",
     "reactstrap": "^9.0.2",
     "styled-components": "^5.3.5",
+    "stylis": "4.0.10",
+    "stylis-plugin-rtl": "2.1.0",
     "vertical-timeline-component-react": "^2.1.1",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
