--- a/HRM_LOCAL/HRM_LOCAL_JAVA/LeaveManagementServer/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/LeaveManagementServer/src/main/resources/application.properties
@@ -4,9 +4,9 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql:///hrm_schema
+spring.datasource.url=jdbc:mysql:///prod_with_data
 spring.datasource.username=root
-spring.datasource.password=nikhil14399
+spring.datasource.password=3472
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
