--- a/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=veeramallaj@gmail.com
 spring.mail.password=bqwrcollqqdecfow
-spring.datasource.url=jdbc:mysql:///prod_with_data
+spring.datasource.url=jdbc:mysql:///hrm_prod_data2
 spring.datasource.username=root
-spring.datasource.password=3472
+spring.datasource.password=devi18@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
