--- a/HRM_LOCAL/HRM_LOCAL_JAVA/employee-service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/employee-service/src/main/resources/application.properties
@@ -6,9 +6,9 @@ eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
-spring.datasource.url=jdbc:mysql:///hrm_schema
+spring.datasource.url=jdbc:mysql:///prod_with_data
 spring.datasource.username=root
-spring.datasource.password=nikhil14399
+spring.datasource.password=3472
 
 
 spring.jpa.show-sql=true
