--- a/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
@@ -8,9 +8,10 @@ spring.mail.port=587
 spring.mail.username=veeramallaj@gmail.com
 spring.mail.password=bqwrcollqqdecfow
 
-spring.datasource.url=jdbc:mysql:///hrm_prod_data2
+spring.datasource.url=jdbc:mysql:///hrm_prod
 spring.datasource.username=root
-spring.datasource.password=devi18@
+spring.datasource.password=Chow$5090
+
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
