--- a/HRM_LOCAL/HRM_LOCAL_JAVA/attendanceService/attendanceService/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/attendanceService/attendanceService/src/main/resources/application.properties
@@ -5,9 +5,9 @@ eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
-spring.datasource.url=jdbc:mysql:///prod_with_data
+spring.datasource.url=jdbc:mysql:///hrm_prod
 spring.datasource.username=root
-spring.datasource.password=3472
+spring.datasource.password=Chow$5090
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
