--- a/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
@@ -8,9 +8,13 @@ spring.mail.port=587
 spring.mail.username=veeramallaj@gmail.com
 spring.mail.password=bqwrcollqqdecfow
 
-spring.datasource.url=jdbc:mysql:///hrm_prod_data2
+spring.datasource.url=jdbc:mysql:///prod_with_data
 spring.datasource.username=root
-spring.datasource.password=devi18@
+spring.datasource.password=3472
+#spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
+#spring.datasource.username=revanth 
+#spring.datasource.password=Password99 
+
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
