--- a/HRM_LOCAL/HRM_LOCAL_JAVA/login/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/login/src/main/resources/application.properties
@@ -6,9 +6,13 @@ eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
-spring.datasource.url=jdbc:mysql:///hrm_prod_data2
+spring.datasource.url=jdbc:mysql:///prod_with_data
 spring.datasource.username=root
-spring.datasource.password=devi18@
+spring.datasource.password=3472
+#spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
+#spring.datasource.username=revanth 
+#spring.datasource.password=Password99 
+
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
