Change Requirements And Some Validations Added

--- a/HRM_LOCAL/HRM_LOCAL_JAVA/attendanceService/attendanceService/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/attendanceService/attendanceService/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:mysql:///prod_with_data
 spring.datasource.username=root
 
 
-spring.datasource.password=3472
+spring.datasource.password=nikhil14399
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Password99 
