Added new microservice Employee types

--- a/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
@@ -39,7 +39,11 @@ spring:
         - id: attendanceService
           uri: lb://attendanceService
           predicates:
-            - Path=/attendance/**           
+            - Path=/attendance/**
+        - id: EmploymentTypeService
+          uri: lb://EmploymentTypeService
+          predicates:
+            - Path=/employmentType/**           
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
