--- a/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.mail.password=bqwrcollqqdecfow
 
 
 
-spring.datasource.url=jdbc:mysql:///prod_with_data
+spring.datasource.url=jdbc:mysql:///hrm_prod_data3
 spring.datasource.username=root
-spring.datasource.password=nikhil14399
+spring.datasource.password=devi18@
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Password99 
