--- a/HRM_LOCAL/HRM_LOCAL_UI/package.json
+++ b/HRM_LOCAL/HRM_LOCAL_UI/package.json
@@ -1,6 +1,7 @@
 {
   "name": "HRM",
   "version": "1.0.0",
+  "proxy":"http://localhost:3000",
   "description": "React login form with validation using custom hooks, redirection upon login, and prevent backwards route",
   "keywords": [
     "react",
