Added Band Service

--- a/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
@@ -43,7 +43,11 @@ spring:
         - id: EmploymentTypeService
           uri: lb://EmploymentTypeService
           predicates:
-            - Path=/employmentType/**           
+            - Path=/employmentType/**
+        - id: bands
+          uri: lb://bands
+          predicates:
+            - Path=/bands/**           
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
