--- a/HRM_LOCAL/HRM_LOCAL_JAVA/departments/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/departments/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.datasource.hikari.maxLifeTime:600000
 
 
 
-spring.datasource.url=jdbc:mysql:///hrm_prod_data3
+spring.datasource.url=jdbc:mysql:///updated28
 spring.datasource.username=root
-spring.datasource.password=devi18@
+spring.datasource.password=Bhavani@21
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Password99 
