--- a/HRM_LOCAL/HRM_LOCAL_JAVA/urp-service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/urp-service/src/main/resources/application.properties
@@ -6,10 +6,9 @@ eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
-spring.datasource.url=jdbc:mysql:///hrm_prod_data3
+spring.datasource.url=jdbc:mysql:///updated28
 spring.datasource.username=root
-
-spring.datasource.password=devi18@
+spring.datasource.password=Bhavani@21
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Password99 
