--- a/HRM_LOCAL/HRM_LOCAL_JAVA/HolidayManagement/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/HolidayManagement/src/main/resources/application.properties
@@ -6,9 +6,9 @@ eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
-spring.datasource.url=jdbc:mysql:///new_hrm
+spring.datasource.url=jdbc:mysql:///hrm_prod_data4
 spring.datasource.username=root
-spring.datasource.password=nikhil14399
+spring.datasource.password=devi18@
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Password99 
