Timesheet: Post Call backend

--- a/HRM_LOCAL/HRM_LOCAL_JAVA/ClientsProjectMapping/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/ClientsProjectMapping/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.datasource.hikari.maxLifeTime:600000
 
 
 
-spring.datasource.url=jdbc:mysql:///updated28
+spring.datasource.url=jdbc:mysql:///hrm-23-06-2022
 
 spring.datasource.username=root
-spring.datasource.password=Bhavani@21
+spring.datasource.password=root
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Password99 
