--- a/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
@@ -52,7 +52,12 @@ spring:
         - id: ClientsProjectsMapping
           uri: lb://clientProjectMapping
           predicates:
-            - Path=/clientProjectMapping/**              
+            - Path=/clientProjectMapping/**
+            
+        - id: timesheetService
+          uri: lb://timesheetService
+          predicates:
+            - Path=/timesheet/**                  
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
