--- a/HRM_LOCAL/HRM_LOCAL_JAVA/ClientsProjectMapping/bin/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/ClientsProjectMapping/bin/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=loginservice
+spring.application.name=clientProjectMapping
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
@@ -8,17 +8,13 @@ spring.datasource.hikari.maxLifeTime:600000
 
 
 
-spring.datasource.url=jdbc:mysql:///hrm_schema
+spring.datasource.url=jdbc:mysql:///updated28
 
 spring.datasource.username=root
-spring.datasource.password=Mohan@9989
-
+spring.datasource.password=Bhavani@21
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Password99 
-
-
-
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -26,6 +22,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.use-new-id-generator-mappings= false
-server.port=8068
+server.port=1000
 
 
