--- a/HRM_LOCAL/HRM_LOCAL_JAVA/login/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/login/src/main/resources/application.properties
@@ -5,28 +5,12 @@ eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
-
-
-<<<<<<< HEAD
-
-spring.datasource.url=jdbc:mysql:///hrm_schema
-
+spring.datasource.url=jdbc:mysql:///hrm_do_not_work
 spring.datasource.username=root
-spring.datasource.password=Mohan@9989
-=======
-spring.datasource.url=jdbc:mysql:///hrm-23-06-2022
-
-spring.datasource.username=root
-spring.datasource.password=root
->>>>>>> d67307eb2f9013caf7fcb21bcba32d95ff33448b
-
+spring.datasource.password=Password@123
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Password99 
-
-
-
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
