--- a/HRM_LOCAL/HRM_LOCAL_JAVA/departments/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/departments/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.datasource.hikari.maxLifeTime:600000
 
 
 
-spring.datasource.url=jdbc:mysql:///hrm_14
+spring.datasource.url=jdbc:mysql:///hrm_prod_data4
 
 spring.datasource.username=root
-spring.datasource.password=nikhil14399
+spring.datasource.password=devi18@
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Password99 
