--- a/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
@@ -47,7 +47,11 @@ spring:
         - id: bands
           uri: lb://bands
           predicates:
-            - Path=/bands/** 
+            - Path=/bands/**
+        - id: Leads
+          uri: lb://Leads
+          predicates:
+            - Path=/Leads/**  
             
         - id: ClientsProjectsMapping
           uri: lb://clientProjectMapping
