document_Upload_service Integrated

--- a/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
@@ -71,7 +71,7 @@ spring:
         - id: documentUploadService
           uri: lb://documentUploadService
           predicates:
-            - Path=/documentUpload/**       
+            - Path=/api/**           
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
