--- a/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/documentUpload_Service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/documentUpload_Service/src/main/resources/application.properties
@@ -8,12 +8,12 @@ spring.servlet.multipart.max-request-size=1MB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 spring.datasource.url=jdbc:mysql:///hrm_prod_data5
+
 spring.datasource.username=root
 spring.datasource.password=devi18@
-
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
-#spring.datasource.password=Admin@123
+#spring.datasource.password=Password99 
 #spring.datasource.url=jdbc:mysql://arshaa-db.cffaplxbjhhq.ap-south-1.rds.amazonaws.com/hrm_prod
 #spring.datasource.username=admin
 #spring.datasource.password=arshaa123
