--- a/HRM_LOCAL/HRM_LOCAL_JAVA/HolidayManagement/pom.xml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/HolidayManagement/pom.xml
@@ -9,7 +9,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 <relativePath/> <!-- lookup parent from repository -->
 </parent>
 <groupId>net.arshaa</groupId>
-<artifactId>urp-service</artifactId>
+<artifactId>holiday-service</artifactId>
 <version>0.0.1-SNAPSHOT</version>
 <name>urp-service</name>
 <description>Demo project for Spring Boot</description>
