--- a/HRM_LOCAL/HRM_LOCAL_JAVA/LeaveManagementServer/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/LeaveManagementServer/src/main/resources/application.properties
@@ -5,11 +5,20 @@ eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.datasource.url=jdbc:mysql:///hrm_prod_data5
 spring.datasource.username=root
 spring.datasource.password=devi18@
+server.port=8089
+spring.datasource.hikari.maxLifeTime:600000
+max_connections=1000
+max_user_connections=500
+
+
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Admin@123
@@ -17,7 +26,4 @@ spring.datasource.password=devi18@
 #spring.datasource.username=admin
 #spring.datasource.password=arshaa123
 
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-server.port=8089
+
