--- a/HRM_LOCAL/HRM_LOCAL_JAVA/urp-service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/urp-service/src/main/resources/application.properties
@@ -15,8 +15,12 @@ spring.datasource.password=devi18@
 #spring.datasource.url=jdbc:mysql://arshaa-db.cffaplxbjhhq.ap-south-1.rds.amazonaws.com/hrm_prod
 #spring.datasource.username=admin
 #spring.datasource.password=arshaa123
-
-
+#Set the maximum number of connections to 1000  The default is 100
+max_connections=1000
+# Set the maximum number of connections per user to 500
+max_user_connections=500
+# Express 200 Idle will be turned off in seconds （IDLE） The connection of , But it doesn't affect the working connection .
+#wait_timeout=200
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
