--- a/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.mail.username=veeramallaj@gmail.com
 spring.mail.password=bqwrcollqqdecfow
 
 
-spring.datasource.url=jdbc:mysql:///hrm_schema
+spring.datasource.url=jdbc:mysql:///hrm_prod_data5
 spring.datasource.username=root
-spring.datasource.password=Mohan@9989
+spring.datasource.password=devi18@
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Admin@123
