--- a/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.servlet.multipart.max-request-size=1MB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 spring.datasource.url=jdbc:mysql:///hrm_prod_data5
+
 spring.datasource.username=root
 spring.datasource.password=devi18@
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
@@ -27,4 +28,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.use-new-id-generator-mappings= false
 server.port=8070
 spring.jackson.serialization.fail-on-empty-beans=false
-
+project.image=images/
