--- a/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/src/main/resources/application.properties
@@ -29,3 +29,6 @@ spring.jpa.hibernate.use-new-id-generator-mappings= false
 server.port=8070
 spring.jackson.serialization.fail-on-empty-beans=false
 project.image=images/
+#QA environment file path .
+#Please dont change this path .
+#project.image=/tmp/images
