--- a/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/pom.xml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/pom.xml
@@ -84,6 +84,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>documentupload</finalName>
 	</build>
 
 </project>
