--- a/HRM_LOCAL/HRM_LOCAL_JAVA/employee-service/employee-service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/employee-service/employee-service/src/main/resources/application.properties
@@ -6,13 +6,13 @@ eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
-spring.datasource.url=jdbc:mysql:///hrm_prod_data5
-spring.datasource.username=root
-spring.datasource.password=devi18@
+#spring.datasource.url=jdbc:mysql:///hrm_prod_data5
+#spring.datasource.username=root
+#spring.datasource.password=devi18@
 
-#spring.datasource.url=jdbc:mysql://10.10.10.40:3306/hrm_prod 
-#spring.datasource.username=root 
-#spring.datasource.password=Admin@123
+spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod 
+spring.datasource.username=hrm 
+spring.datasource.password=hrm@123
 
 
 spring.jpa.show-sql=true
