--- a/HRM_LOCAL/HRM_LOCAL_UI/package.json
+++ b/HRM_LOCAL/HRM_LOCAL_UI/package.json
@@ -40,7 +40,7 @@
     "lodash": "^4.17.21",
     "material-table": "^1.63.0",
     "mdb-react-ui-kit": "^3.0.0",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
@@ -52,6 +52,7 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-loading-overlay": "^1.0.1",
+    "react-moment": "^1.1.2",
     "react-multiple-select-dropdown-lite": "^2.0.5",
     "react-phone-input-2": "^2.15.0",
     "react-redux": "^8.0.1",
