--- a/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
@@ -75,7 +75,11 @@ spring:
         - id: documentUploadService
           uri: lb://documentUploadService
           predicates:
-            - Path=/api/**           
+            - Path=/api/**
+        - id: ResignationService
+          uri: lb://ResignationService
+          predicates:
+            - Path=/resignation/**              
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
