--- a/HRM_LOCAL/HRM_LOCAL_UI/package.json
+++ b/HRM_LOCAL/HRM_LOCAL_UI/package.json
@@ -43,6 +43,7 @@
     "moment": "^2.29.4",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-block-image": "^1.0.0",
     "react-bootstrap": "^2.2.3",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
