--- a/HRM_LOCAL/HRM_LOCAL_UI/package.json
+++ b/HRM_LOCAL/HRM_LOCAL_UI/package.json
@@ -33,6 +33,7 @@
     "ag-grid-enterprise": "^23.2.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "prop-types": "^15.7.2",
     "country-dropdown-with-flags-for-react": "^1.1.4",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
