Post call is working fine at Recruitment Tracker

--- a/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
@@ -79,7 +79,12 @@ spring:
         - id: ResignationService
           uri: lb://ResignationService
           predicates:
-            - Path=/resignation/**              
+            - Path=/resignation/**  
+             
+        - id: RecruitmentTracker
+          uri: lb://RecruitmentTracker
+          predicates:
+            - Path=/recruitmentTracker/**           
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
