--- a/HRM_LOCAL/HRM_LOCAL_UI/package.json
+++ b/HRM_LOCAL/HRM_LOCAL_UI/package.json
@@ -33,9 +33,9 @@
     "ag-grid-enterprise": "^23.2.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "prop-types": "^15.7.2",
     "country-dropdown-with-flags-for-react": "^1.1.4",
     "date-fns": "^2.28.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
@@ -43,6 +43,7 @@
     "mdb-react-ui-kit": "^3.0.0",
     "moment": "^2.29.4",
     "node-sass": "^6.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-block-image": "^1.0.0",
     "react-bootstrap": "^2.2.3",
