--- a/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/src/main/resources/application.properties
@@ -7,10 +7,11 @@ spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
-spring.datasource.url=jdbc:mysql:///hrm_prod_data5
 
+spring.datasource.url=jdbc:mysql:///updated05-08
 spring.datasource.username=root
-spring.datasource.password=devi18@
+spring.datasource.password=Bhavani@21
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod 
 #spring.datasource.username=hrm 
 #spring.datasource.password=hrm@123 
