--- a/HRM_LOCAL/HRM_LOCAL_JAVA/employee-service/employee-service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/employee-service/employee-service/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
 
-spring.datasource.url=jdbc:mysql:///hrm_27_09
+spring.datasource.url=jdbc:mysql:///updated05-08
 spring.datasource.username=root
-spring.datasource.password=nikhil14399
+spring.datasource.password=Bhavani@21
 
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod 
