--- a/HRM_LOCAL/HRM_LOCAL_UI/package.json
+++ b/HRM_LOCAL/HRM_LOCAL_UI/package.json
@@ -12,6 +12,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@ant-design/plots": "1.2.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/poppins": "^4.5.8",
@@ -45,6 +46,7 @@
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-avatar": "^5.0.3",
     "react-block-image": "^1.0.0",
     "react-bootstrap": "^2.2.3",
     "react-bootstrap-table-next": "^4.0.3",
@@ -75,8 +77,7 @@
     "vertical-timeline-component-react": "^2.1.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
-    "yup": "^0.32.11",
-    "@ant-design/plots": "1.2.2"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "typescript": "3.3.3"
