--- a/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/api-gateway/src/main/resources/application.yml
@@ -84,7 +84,11 @@ spring:
         - id: RecruitmentTracker
           uri: lb://RecruitmentTracker
           predicates:
-            - Path=/recruitmentTracker/**           
+            - Path=/recruitmentTracker/** 
+        - id: RecruitmentTracker
+          uri: lb://RecruitmentTracker
+          predicates:
+            - Path=/candidate/**          
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
