error was solved and edit my profile is working

--- a/HRM_LOCAL/HRM_LOCAL_JAVA/departments/pom.xml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/departments/pom.xml
@@ -50,6 +50,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
+		<finalName>departments</finalName>
+</build>
 
 </project>
